fix last row to align with column

--- a/_assets/css/pages/_projects.scss
+++ b/_assets/css/pages/_projects.scss
@@ -218,8 +218,11 @@
   margin-right: 2rem;
   max-width: 450px;
   width: 100%;
-  //justify-content: center;
   //display: none;
+}
+
+.empty-card{
+  visibility: hidden;
 }
 
 .project-item__outer.hide {
